--- a/TODO
+++ b/TODO
@@ -9,7 +9,8 @@ TODO
 10. Presunout sem wd-citace-monografie
 11. Warning when author hasn't filled 'given name' and 'family name'.
 12. Add explicit order of keys
-13.
+13. Resit po Data-Wikipedia-CS-Template-CitaceMonografie
+14.
 
 Applied
 =======
