--- a/TODO
+++ b/TODO
@@ -8,7 +8,8 @@ TODO
 11. Warning when author hasn't filled 'given name' and 'family name'.
 12. Add explicit order of keys
 13. Rewrite to Data-Wikipedia-CS-Template-CitaceMonografie
-14.
+14. Add texts.
+15.
 
 Applied
 =======
