--- a/TODO
+++ b/TODO
@@ -10,7 +10,8 @@ TODO
 13. Rewrite to Data-Wikipedia-CS-Template-CitaceMonografie
 14. Add texts.
 15. Fix Q121962211, which has deprecated value in family name.
-16.
+16. Add DESCRIPTION section to doc.
+17.
 
 Applied
 =======
