--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 0.03
+ - Provision fix of P31 check (add support for translated edition).
  - Update copyright years.
 
 0.02 2024-11-26T15:50:21+01:00
