--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.03
  - Add constructor tests.
+ - Fix help.
  - Provision fix of P31 check (add support for translated edition).
  - Update copyright years.
 
