--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.04
  - Fix DEPENDENCIES section in doc.
  - Fix minimal version of Test::Warn to 0.31.
+ - Rewrite code for fetching Wikidata item to callback. For better testing.
 
 0.03 2025-02-17T13:53:04+01:00
  - Add basic run() tests.
