Add link to author

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 0.05
  - Add check of 'cb_wikidata' callback.
+ - Add link to author.
  - Rename {{citace ..}} to {{Citace ..}}.
 
 0.04 2025-05-09T09:52:12+02:00
