--- a/TODO
+++ b/TODO
@@ -1,6 +1,5 @@
 TODO
 ----
-2. Pridat odkaz na autora.
 5. Pridat link na nakladatelstvi.
 6. Kdyz je vice podtitulu, tak zpracovat? Q83952523
 7. Kdyz dam Q94952745, tak ilustratorka je Fučík, místo Fučíková
@@ -30,3 +29,6 @@ OK [20231027] skim
 
 10. Presunout sem wd-citace-monografie
 OK [20231027] skim
+
+2. Pridat odkaz na autora.
+OK [20250927] skim
