--- a/TODO
+++ b/TODO
@@ -9,7 +9,8 @@ TODO
 14. Add texts.
 16. Add DESCRIPTION section to doc.
 17. Improve check for P31 to all "version, edition..." subclasses.
-18.
+18. Process multiple family names.
+19.
 
 Applied
 =======
